# alacritty-scheme-switcher

./: Cargo.toml  README.md  main.rs
