[package]
name = "alacritty-scheme-switcher"
version = "0.1.1"
authors = ["Nikolai Oplachko <magnickolas@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Switch alacritty schemes with shortcut"
homepage = "https://oplachko.com"
repository = "https://github.com/magnickolas/alacritty-scheme-switcher"
readme = "README.md"
keywords = ["alacritty", "terminal", "colorscheme", "scheme", "switch"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
regex = "1.5.4"
yaml-rust = "0.4.5"

[patch.crates-io]
yaml-rust = { git = "https://github.com/magnickolas/yaml-rust", branch = "v0.4.5-altered" }

[[bin]]
name = "alacritty_scheme_switcher"
path = "main.rs"
